<resources>
    <string name="app_name">EasyBusiness</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to admin menu -->
    <string name="admin_nav_home">Home</string>
    <string name="admin_nav_sales">Sales</string>
    <string name="admin_nav_inventory">Inventory</string>
    <string name="admin_nav_production">Production</string>
    <string name="admin_nav_suppliers">Suppliers</string>
    <string name="admin_nav_customers">Customers</string>
    <string name="admin_nav_employees">Employees</string>

    <!-- Strings related to user menu -->
    <string name="users_nav_home">Home</string>
    <string name="users_nav_routes">Routes</string>
    <string name="users_nav_sales">Sales</string>
    <string name="users_nav_delivery_stock">Delivery Stock</string>
    <string name="users_nav_customers">Customers</string>

    <!-- Strings related to viewCustomers & addCustomers activity -->
    <string name="customer_list_text">Customers</string>
    <string name="Firstname">First name</string>
    <string name="Lastname">Last name</string>
    <string name="Telephone">Telephone</string>
    <string name="Address">Address</string>
    <string name="City">City</string>
    <string name="Country">Country</string>
    <string name="Select_Country">Select Country</string>
    <string name="Products">Products</string>
    <string name="Add_Customer">Add Customer</string>

    <!-- Strings related to view suppliers activity -->
    <string name="supplier_name_text_view">Name:</string>
    <string name="supplier_name_text">Name:</string>
    <string name="supplier_telephone_text_view">Telephone:</string>
    <string name="supplier_telephone_text">Telephone:</string>
    <string name="supplier_address_text_view">Address:</string>
    <string name="supplier_city_text_view">City:</string>
    <string name="supplies_list_text">Supplies List:</string>
    <string name="supplies_name_text_view">Name:</string>
    <string name="supplies_quantity_text_view">Quantity:</string>
    <string name="supplies_price_text_view">Price:</string>
    <string name="add_supplier_Btn">Add Customer</string>


    <string-array name="randomItems">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="baseURL">http://www.panickapps.com/eb/API</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Select_Products">Select Products</string>
    <string name="Position">Position</string>
    <string name="Select_Position">Select Position</string>
    <string name="Part_Time">Part Time</string>
    <string name="Full_Time">Full Time</string>
    <string name="Add_Employee">Add Employee</string>
    <string name="Supplies">Supplies</string>
    <string name="Add_Supplier">Add Supplier</string>
    <string name="retry">Retry</string>
    <string name="abort">Abort</string>
    <string name="connection_error">Connection error</string>
    <string name="connection_error_message">A connection error has occured</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unknown_error_message">An unknown error has occured while getting data from the server.</string>
    <string name="dismiss">Dismiss</string>
    <string name="exit">Exit</string>
    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">Add Product</string>
    <string name="select_date_of_hire">Select Date of Hire</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="products">Products:</string>
    <string name="select_products">Select Products</string>
    <string name="save">Save</string>
    <string name="product_type">Type</string>
    <string name="select_type">Select Type</string>
    <string name="product_price">Price</string>
    <string name="add_supply">Add Supply</string>
    <string name="add_product_inventory">Add Product</string>
    <string name="delete_item">Delete item</string>
    <string name="are_you_sure_delete">Are you sure you would like to delete</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="has_been_delete">has been deleted.</string>
    <string name="date_hired">Date Hired</string>
    <string name="edit">Edit</string>
    <string name="to_pdf">To PDF</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="size">Size</string>
    <string name="productType">Type</string>
    <string name="supplysupplier">Supplier</string>
    <string name="inventory">Inventory</string>
    <string name="product_name">Product name</string>
    <string name="select_size">Select Size</string>
    <string name="select_product_supplies">Select product supplies</string>
    <string name="edit_product_supplies">Edit Product Supplies</string>
    <string name="select_product">Select Product</string>
    <string name="supply_name">Supply Name</string>
    <string name="select_supplier">Select supplier</string>
    <string name="total">Total</string>
    <string name="select_customer">Select customer</string>
    <string name="add_sale">Add Sale</string>
    <string name="add_production">Add Production</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="my_account">My Account</string>

</resources>