<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <!-- Home -->
        <item
            android:id="@+id/admin_nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/admin_nav_home" />

        <item
            android:id="@+id/admin_nav_inventory"
            android:icon="@drawable/ic_storage_black_24dp"
            android:title="@string/admin_nav_inventory" />

        <item
            android:id="@+id/admin_nav_sales"
            android:icon="@drawable/ic_poll_black_24dp"
            android:title="@string/admin_nav_sales" />

        <item
            android:id="@+id/admin_nav_production"
            android:icon="@drawable/ic_store_mall_directory_black_24dp"
            android:title="@string/admin_nav_production" />

        <item
            android:id="@+id/admin_nav_suppliers"
            android:icon="@drawable/ic_assignment_ind_black_24dp"
            android:title="@string/admin_nav_suppliers" />

        <item
            android:id="@+id/admin_nav_customers"
            android:icon="@drawable/ic_assignment_ind_black_24dp"
            android:title="@string/admin_nav_customers" />

        <item
            android:id="@+id/admin_nav_employees"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/admin_nav_employees" />

        <item
            android:id="@+id/users_nav_routes"
            android:icon="@drawable/ic_local_shipping_black_24dp"
            android:title="@string/users_nav_routes" />

        <item
            android:id="@+id/users_nav_delivery_stock"
            android:icon="@drawable/ic_store_mall_directory_black_24dp"
            android:title="@string/users_nav_delivery_stock" />

    </group>

</menu>