<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <!-- Home -->
        <item
            android:id="@+id/admin_nav_home"
            android:icon="@mipmap/ic_launcher_round"
            android:title="@string/admin_nav_home" />

        <item
            android:id="@+id/admin_nav_inventory"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/admin_nav_inventory" />

        <item
            android:id="@+id/admin_nav_sales"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/admin_nav_sales" />

        <item
            android:id="@+id/admin_nav_production"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/admin_nav_production" />

        <item
            android:id="@+id/admin_nav_suppliers"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/admin_nav_suppliers" />

        <item
            android:id="@+id/admin_nav_customers"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/admin_nav_customers" />

        <item
            android:id="@+id/admin_nav_employees"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/admin_nav_employees" />

    </group>

</menu>

