<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <!-- Home -->
        <item
            android:id="@+id/users_nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/users_nav_home" />

        <item
            android:id="@+id/users_nav_routes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/users_nav_routes" />

        <item
            android:id="@+id/users_nav_sales"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/users_nav_sales" />

        <item
            android:id="@+id/users_nav_delivery_stock"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/users_nav_delivery_stock" />


        <item
            android:id="@+id/users_nav_customers"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/users_nav_customers" />

    </group>

</menu>