<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.easybusiness.eb_androidapp.UI.Fragments.AddEmployeesFragment">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/employees_name_layout"
        >

        <EditText
            android:id="@+id/employees_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat"
            android:hint="@string/Name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/employees_address_layout"
        android:layout_below="@+id/employees_name_layout"
        >

        <EditText
            android:id="@+id/employees_address_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat"
            android:hint="@string/Address"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/employees_telephone_layout"
        android:layout_below="@+id/employees_address_layout"
        >

        <EditText
            android:id="@+id/employees_telephone_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat"
            android:hint="@string/Telephone"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/employees_city_layout"
        android:layout_below="@+id/employees_telephone_layout"
        >

        <EditText
            android:id="@+id/employees_city_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat"
            android:hint="@string/City"/>

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/employees_city_layout"
        android:layout_marginTop="20dp"
        android:text="@string/Select_Country" />

    <Spinner
        android:id="@+id/position_spinner"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/country_spinner"
        android:layout_marginTop="20dp"
        android:text="@string/Select_Position" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time_radiogroup"
        android:layout_below="@id/position_spinner"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="20dp"
        >

        <RadioButton
            android:id="@+id/part_time_radio_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Part_Time"/>

        <RadioButton
            android:id="@+id/full_time_radio_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Full_Time" />

    </RadioGroup>



    <Button
        android:id="@+id/add_employees_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_below="@id/time_radiogroup"
        android:layout_marginTop="25dp"
        android:text="@string/Add_Employee" />

</RelativeLayout>