<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context="com.easybusiness.eb_androidapp.UI.Fragments.AddSuppliersFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/supplier_name_layout"
        >

        <EditText
            android:id="@+id/supplier_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/supplier_name_layout"
        android:id="@+id/supplier_telephone_layout"
        >

        <EditText
            android:id="@+id/supplier_telephone_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Telephone"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/supplier_telephone_layout"
        android:id="@+id/supplier_address_layout"
        >

        <EditText
            android:id="@+id/supplier_address_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Address"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/supplier_address_layout"
        android:id="@+id/supplier_city_layout"
        >

        <EditText
            android:id="@+id/supplier_city_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/City"/>

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/supplier_country_spinner"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/supplier_city_layout"
        android:layout_marginTop="20dp"
        android:text="@string/Select_Country" />

    <Button
        android:id="@+id/add_supplier_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:layout_below="@id/supplier_country_spinner"
        android:text="@string/Add_Supplier" />


</RelativeLayout>