<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="com.easybusiness.eb_androidapp.UI.Fragments.AddCustomersFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_fragment_title"
                android:id="@+id/customer_name_input"
                >

                <EditText
                    android:id="@+id/customer_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:hint="@string/Name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_name_input"
                android:id="@+id/customer_telephone_input">

                <EditText
                    android:id="@+id/customer_telephone_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:hint="@string/Telephone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_telephone_input"
                android:id="@+id/customer_address_input">

                <EditText
                    android:id="@+id/customer_address_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Address" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_address_input"
                android:id="@+id/customer_city_input">

                <EditText
                    android:id="@+id/customer_city_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/City" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/customer_city_input"
                android:layout_marginTop="20dp"
                android:text="@string/Select_Country" />

            <TextView
                android:id="@+id/customer_products_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/country_spinner"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="17sp"
                android:text="@string/Products" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_customer_select_products_Btn"
                android:layout_below="@id/customer_products_text_view"
                android:text="@string/Select_Products"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:id="@+id/add_customer_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:layout_below="@id/add_customer_select_products_Btn"
                android:layout_marginTop="25dp"
                android:text="@string/Add_Customer" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>