<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.easybusiness.eb_androidapp.UI.Fragments.EditProductFragment">

    <ProgressBar
        android:id="@+id/edit_product_progress"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/edit_product_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Product name-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_product_name_layout"
                android:hint="@string/product_name"
                >

                <EditText
                    android:id="@+id/edit_product_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <!--Price-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_product_price_layout"
                android:layout_below="@+id/edit_product_name_layout"
                android:hint="@string/price"
                >

                <EditText
                    android:id="@+id/edit_product_price_edittext"
                    android:layout_width="match_parent"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    style="@style/Base.TextAppearance.AppCompat"/>

            </android.support.design.widget.TextInputLayout>

            <!--Quantity-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_product_quantity_layout"
                android:layout_below="@+id/edit_product_price_layout"
                android:hint="@string/quantity"
                >

                <EditText
                    android:id="@+id/edit_product_quantity_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                    style="@style/Base.TextAppearance.AppCompat"/>

            </android.support.design.widget.TextInputLayout>

            <!--Product size-->
            <TextView
                android:id="@+id/edit_product_size_textview"
                android:text="@string/select_size"
                android:layout_below="@id/edit_product_quantity_layout"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/edit_product_size_spinner"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/edit_product_size_textview"
                android:text="@string/Select_Country" />

            <!--Product Type-->
            <TextView
                android:id="@+id/edit_product_type_textview"
                android:text="@string/select_type"
                android:layout_below="@id/edit_product_size_spinner"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/edit_product_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/edit_product_type_textview"
                android:text="@string/select_type" />

            <!--Product supplies (BTN) -->

            <Button
                android:id="@+id/edit_product_save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:layout_below="@id/edit_product_type_spinner"
                android:layout_marginTop="25dp"
                android:text="@string/save" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>